--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "A restfull backend for Football Predictions android application",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Alexandru Sarpe",
   "license": "ISC",
@@ -13,7 +12,6 @@
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "mongoose": "^5.8.2",
-    "mongoose-unique-validator": "^2.0.3",
-    "nodemon": "^2.0.2"
+    "mongoose-unique-validator": "^2.0.3"
   }
 }
